--- a/internal/httpapi/templates/subscribe_demo.tmpl
+++ b/internal/httpapi/templates/subscribe_demo.tmpl
@@ -27,6 +27,6 @@
       <p>Embed the form on pages served from the allowed origin. Customize button text, accent color, and mode with query params.</p>
       <div id="subscribe-demo"></div>
     </main>
-    <script defer src="/subscribe.js?site_id={{.SiteID}}"></script>
+    <script defer src="{{.ScriptURL}}"></script>
   </body>
 </html>
